Flask-SQLAlchemy Database

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,6 +29,7 @@
 	        </div>
 	        <div class="navbar-nav ml-auto">
 	        	<a class="nav-item nav-link" href="{{ url_for('login') }}">Retrieve Box</a>
+	        	<div class="nav-item mt-2" style="color: rgba(0,0,0.9)">Or</div>
 	        	<a class="nav-item nav-link" href="{{ url_for('register') }}">Create Box</a>
 	        </div>
 		
