--- a/box/templates/layout.html
+++ b/box/templates/layout.html
@@ -28,9 +28,13 @@
 	         	<a class="nav-item nav-link" href="{{ url_for('your') }}">Your Notes</a>
 	        </div>
 	        <div class="navbar-nav ml-auto">
-	        	<a class="nav-item nav-link" href="{{ url_for('login') }}">Retrieve Box</a>
-	        	<div class="nav-item mt-2" style="color: rgba(0,0,0.9)">Or</div>
-	        	<a class="nav-item nav-link" href="{{ url_for('register') }}">Create Box</a>
+	        	{% if current_user.is_authenticated %}
+	        		<a class="nav-item nav-link" href="{{ url_for('logout') }}">Close Box</a>
+	        	{% else %}
+		        	<a class="nav-item nav-link" href="{{ url_for('login') }}">Retrieve Box</a>
+		        	<div class="nav-item mt-2" style="color: rgba(0,0,0.9)">Or</div>
+		        	<a class="nav-item nav-link" href="{{ url_for('register') }}">Create Box</a>
+		        {% endif %}
 	        </div>
 		
 		</div>
