--- a/box/templates/layout.html
+++ b/box/templates/layout.html
@@ -7,7 +7,8 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<!-- CSS stuff -->
-	<link rel="stylesheet" style="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+
 
 	{% if title %}
 		<title>ThoughtBox - {{title}}</title>
@@ -16,7 +17,7 @@
 	{% endif %}
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #90C8F5">
+	<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1abc9c">
 		<a href="/" class="navbar-brand">ThoughtBox</a>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
 			<span class="navbar-toggler-icon"></span>
@@ -29,10 +30,12 @@
 	        </div>
 	        <div class="navbar-nav ml-auto">
 	        	{% if current_user.is_authenticated %}
+	        		<a class="nav-item nav-link" href="{{ url_for('new_note') }}">New Note</a>
 	        		<a class="nav-item nav-link" href="{{ url_for('logout') }}">Close Box</a>
+
 	        	{% else %}
 		        	<a class="nav-item nav-link" href="{{ url_for('login') }}">Retrieve Box</a>
-		        	<div class="nav-item mt-2" style="color: rgba(0,0,0.9)">Or</div>
+		        	<div class="nav-item mt-2" style="color: #fff">Or</div>
 		        	<a class="nav-item nav-link" href="{{ url_for('register') }}">Create Box</a>
 		        {% endif %}
 	        </div>
