--- a/box/templates/pub.html
+++ b/box/templates/pub.html
@@ -6,8 +6,8 @@
 		<article class="media content-section">
 		  <div class="media-body">
 		    <div class="article-metadata">
-		      <a class="mr-2" href="#">{{ note.name }}</a>
-		      <small class="text-muted">{{ note.date }}</small>
+		      <a class="mr-2" href="#">{{ note.author.name }}</a>
+		      <small class="text-muted">{{ note.date_posted.strftime('%m-%d-%Y') }}</small>
 		    </div>
 		    <h2><a class="article-title" href="#">{{ note.title }}</a></h2>
 		    <p class="article-content">{{ note.content }}</p>
