--- a/box/templates/login.html
+++ b/box/templates/login.html
@@ -10,6 +10,24 @@
 			<fieldset class="form-group">
 				<legend class="border-bottom mb-4">Open an Existing Box</legend> 
 				<div class="form-group">
+					{{ form.username.label(class="form-control-label") }}
+					{% if form.username.errors %}
+						{{ form.username(class="form-control form-control-lg is-invalid") }}
+						<div class="invalid-feedback">
+							{% for error in form.username.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.username(class="form-control form-control-lg") }}
+					{% endif %}
+				</div>
+				<div class="form-check" style="font-size:75%;">
+					{{ form.remember(class="form-check-input") }}
+					{{ form.remember.label(class="form-check-label") }} 
+				</div>
+
+				<div class="form-group">
 					{{ form.password.label(class="form-control-label") }}
 					{% if form.password.errors %}
 						{{ form.password(class="form-control form-control-lg is-invalid") }}
