--- a/box/templates/home.html
+++ b/box/templates/home.html
@@ -6,7 +6,7 @@
 	  <h1 class="display-4">ThoughtBox</h1>
 	  <p class="lead"><em>Quick & Easy Note-Taking On The Web</em></p>
 	  <hr class="my-4">
-	  <p>Get Started With a Single Password</p>
+	  <p>Get Started With a Username & Password</p>
 	  <p class="lead">
 	    <a class="btn btn-primary btn-lg" href="{{ url_for('register') }}" role="button">Create Box</a>
 	  </p>
